fixed firefox scrollbar issue fixed error when background set to None added material color scheme colors fixed mobile issues

--- a/dashmachine/static/css/global/dashmachine-theme.css
+++ b/dashmachine/static/css/global/dashmachine-theme.css
@@ -23,19 +23,60 @@
   --theme-color-font-muted: #f9f9f9;
   --theme-warning: #dc584e;
 }
-[data-accent="green"] {
-  --theme-primary: #49B03E;
+[data-accent="red"] {
+  --theme-primary: #f44336;
 }
 [data-accent="pink"] {
-  --theme-primary: #EE1289;
+  --theme-primary: #e91e63;
+}
+[data-accent="purple"] {
+  --theme-primary: #9c27b0;
+}
+[data-accent="deepPurple"] {
+  --theme-primary: #673ab7;
+}
+[data-accent="indigo"] {
+  --theme-primary: #3f51b5;
 }
 [data-accent="blue"] {
-  --theme-primary: #5151b0;
+  --theme-primary: #2196f3;
+}
+[data-accent="lightBlue"] {
+  --theme-primary: #03a9f4;
+}
+[data-accent="cyan"] {
+  --theme-primary: #00bcd4;
+}
+[data-accent="teal"] {
+  --theme-primary: #009688;
+}
+[data-accent="green"] {
+  --theme-primary: #4caf50;
+}
+[data-accent="lightGreen"] {
+  --theme-primary: #8bc34a;
+}
+[data-accent="lime"] {
+  --theme-primary: #cddc39;
+}
+[data-accent="yellow"] {
+  --theme-primary: #ffeb3b;
+}
+[data-accent="amber"] {
+  --theme-primary: #ffc107;
+}
+[data-accent="deepOrange"] {
+  --theme-primary: #ff5722;
+}
+[data-accent="brown"] {
+  --theme-primary: #795548;
 }
 [data-accent="grey"] {
-  --theme-primary: #C6C3CC;
+  --theme-primary: #9e9e9e;
 }
-
+[data-accent="blueGrey"] {
+  --theme-primary: #607d8b;
+}
 /* THEME CLASSES */
 .theme-surface {
   background-color: var(--theme-surface) !important;
