--- a/dashmachine/static/css/settings_system/settings.css
+++ b/dashmachine/static/css/settings_system/settings.css
@@ -1,5 +1,9 @@
-body {
-    overflow: hidden !important;
+
+@media (min-width: 990px)
+{
+    body {
+        overflow: hidden !important;
+    }
 }
 
 .settings-page-card {
